# BigOS

./: .clang-format  DesignDoc.txt
CMake/: CommonConfig.cmake
Markdown/: contributing_rules.md
docs/: acronyms.md
include/debug/: debug_stdio.h
include/stdbigos/: error.h  sbi.h  types.h
src/kernel/: CMakeLists.txt  kernel.c  kinit.c  kmalloc.c  kmalloc.h  linker.ld  test_trap_vector.s
src/kernel/scheduler/: scheduler.c  scheduler.h
src/kernel/virtual_memory/: address_space.c  address_space.h  mm_common.h  page_table.c  page_table.h  pmm.c  ram_map.c  ram_map.h  vmm.h
src/lib/stdbigos/: error.c  sbi.c
